Cambios para la API
