# routes/api.php
@@ -26,4 +26,4 @@ Route::get('extras', [ExtrasController::class, 'indexApi']);
 Route::get('funciones', [FuncionesController::class, 'indexApi']);
 Route::get('pelicula/funciones/{id}', [FuncionesController::class, 'indexMovieApi']);
 Route::get('peliculas', [PeliculasController::class, 'indexApi']);
-Route::post('storeEntrada', [EntradasController::class, 'addExtra']);
+Route::post('storeEntrada', [EntradasController::class, 'storeEntrada']);
